prevent card from flickering before preloader

--- a/static/tjtinder.css
+++ b/static/tjtinder.css
@@ -40,6 +40,7 @@ nav {
     margin-right: auto;
     padding-top: 10px;
     padding-bottom: 1px;
+    display: none;
 }
 
 .main .card-panel .profile-name {
